# Singularity

./: .gitignore  README.md  config.mk  makefile  meson.build  test.css
catalog/: Singularity.xml
data/: ColumnItemView.ui  ErrorLabel.ui  ErrorsList.ui  ExportDialog.ui  FeedBuilder.ui  FeedPane.ui  GridItemView.ui  GridViewLink.js  ImportDialog.ui  ItemListEntry.ui  MainWindow.ui  PropertiesWindow.ui  SettingsView.ui  StreamItemView.ui  StreamViewLink.js  UpdateFeedEntry.ui  UpdatePopover.ui  column.css  default.css  emblems.xcf  grid.css  meson.build  org.df458.singularity.gschema.xml  singularity.gresource.xml  stream.css
data/schemas/: Create.sql  Update-to-1.sql
doc/: singularity.1  wip_schema
doc/mockups/: Main Window.glade
doc/mockups/html/: column.html  fullview.js  grid.html  mock-column.css  mock-grid.css  mock-stream.css  mock.css  read.js  stream.html
doc/structure/: Feed.uml
src/: AddPane.vala  AddPopupWindow.vala  DatabaseManager.vala  Feed.vala  FeedSettingsPane.vala  GridViewBuilder.vala  IO.vala  Item.vala  JSStr.vala  MainWindow.vala  OPML.vala  RuleEntry.vala  SettingsPane.vala  Singularity.vala  StreamViewBuilder.vala  ViewBuilder.vala  main.vala
src/app/: AddPane.vala  DatabaseManager.vala  ErrorLabel.vala  ErrorsList.vala  FeedBuilder.vala  FeedPane.vala  FeedSettingsPane.vala  GridViewBuilder.vala  IO.vala  IconLocator.vala  ImportDialog.vala  Init.vala  Item.vala  ItemListEntry.vala  ItemView.vala  JSStr.vala  MainWindow.vala  OPML.vala  PropertiesWindow.vala  RuleEntry.vala  SettingsPane.vala  SettingsView.vala  Singularity.vala  StreamViewBuilder.vala  ViewBuilder.vala  main.vala  meson.build
src/app/menus/: ViewMenuBuilder.vala
src/ext/: Entrypoint.vala
src/lib/: AppSettings.vala  AtomItemDataSource.vala  Attachment.vala  CollectionNode.vala  CollectionRequest.vala  CollectionTreeModelFilter.vala  CollectionTreeStore.vala  ColumnViewBuilder.vala  DataLocator.vala  DataSource.vala  DatabaseManager.vala  DatabaseRequest.vala  DeleteCollectionRequest.vala  Feed.vala  FeedCollection.vala  FeedProvider.vala  GlobalSettings.vala  GridViewBuilder.vala  IFeedRequest.vala  IO.vala  IconRequest.vala  Item.vala  ItemListRequest.vala  ItemToggleRequest.vala  ItemViewRequest.vala  LoadFeedsRequest.vala  OPML.vala  OPMLFeedDataSource.vala  Person.vala  RSSItemDataSource.vala  RenameRequest.vala  ReversibleDataSource.vala  SessionSettings.vala  StreamViewBuilder.vala  SubscribeRequest.vala  Subscription.vala  Tag.vala  UnsubscribeRequest.vala  UpdateGenerator.vala  UpdatePackage.vala  (+10 more)
src/test/: DatabaseTest.vala  FeedCollectionTest.vala  FeedTest.vala  MockDataSource.vala  OPMLTest.vala  PersonTest.vala  SettingsTest.vala  TagTest.vala  TestSuite.vala  UnitTest.vala  UpdatePackageTest.vala  main.vala  meson.build
vapi/: jshandler.vapi
